Text from Effect Strip is invisible in VSE Preview. #46089

Closed
opened 2015-09-12 17:29:03 +02:00 by ronan ducluzeau · 10 comments

System Information
ubuntu 14.04 64 bits Nvidia Titan black

Blender Version
Broken: master 26041f9

Short description of error
In release notes, new text strip is described with another design than in current master.
http://wiki.blender.org/index.php/Dev:Ref/Release_Notes/2.76/Sequencer

Text auto-alignement was redesigned.
As explained in release notes, disabling auto-center option was the condition to allow display of text in VSE preview.
But it was removed in new design and there is no way to see and to synchronize text while playback.

Exact steps for others to reproduce the error

Add a text strip in Video Sequence Editor.
You should see a white text in Prevew. It stays blank as in attached.blend.
Text_Effect_Strip_Invisible.blend

**System Information** ubuntu 14.04 64 bits Nvidia Titan black **Blender Version** Broken: master 26041f9 **Short description of error** In release notes, new text strip is described with another design than in current master. http://wiki.blender.org/index.php/Dev:Ref/Release_Notes/2.76/Sequencer Text auto-alignement was redesigned. As explained in release notes, disabling auto-center option was the condition to allow display of text in VSE preview. But it was removed in new design and there is no way to see and to synchronize text while playback. **Exact steps for others to reproduce the error** Add a text strip in Video Sequence Editor. You should see a white text in Prevew. It stays blank as in attached.blend. [Text_Effect_Strip_Invisible.blend](https://archive.blender.org/developer/F232693/Text_Effect_Strip_Invisible.blend)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @zeauro

Added subscriber: @zeauro

#46098 was marked as duplicate of this issue

#46098 was marked as duplicate of this issue

#46137 was marked as duplicate of this issue

#46137 was marked as duplicate of this issue
Antonis Ryakiotakis was assigned by Bastien Montagne 2015-09-13 08:47:02 +02:00

Added subscriber: @mont29

Added subscriber: @mont29

Added subscriber: @noone

Added subscriber: @noone
Antonis Ryakiotakis was unassigned by Bastien Montagne 2015-09-13 14:51:21 +02:00
Bastien Montagne self-assigned this 2015-09-13 14:51:21 +02:00

Added subscriber: @Psy-Fi

Added subscriber: @Psy-Fi

This issue was referenced by 7900d697f0

This issue was referenced by 7900d697f0ade0be21dbb3757d59f1a07268b242

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscribers: @ideasman42, @KaPtainCugel

Added subscribers: @ideasman42, @KaPtainCugel
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46089
No description provided.