Fix T46089: Text from Effect Strip is invisible in VSE Preview.

Deviding two ints together never yields a float... Also, logic of various proxies size corrections was quite broken.
Now we should always get the same (relative) size of text whatever proxy setting/render scale is chosen.